--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,18 +7,20 @@
 	<div layout:fragment="content">
 		<div class="row">
 			<div class="col-md-12 col-sm-12 col-xs-12">
-				<div class="dashboard_graph">
-					<div class="row x_title">
+				<div class="x_panel">
+					<div class="x_title">
 						<div class="col-md-6">
 							<h3>Home Page</h3>
 						</div>
+						<div class="clearfix"></div>
 					</div>
-					<div class="col-md-12 col-sm-12 col-xs-12"></div>
-					<div class="clearfix"></div>
+					<div class="x-content">
+						<div class="col-md-12 col-sm-12 col-xs-12">EHY THERE!</div>
+					</div>
 				</div>
 			</div>
 		</div>
-		<br />
+		<br/>
 	</div>
 </body>
 </html>
