cambiata icona Engineering

--- a/src/main/resources/templates/fragments/sidebarAndTop.html
+++ b/src/main/resources/templates/fragments/sidebarAndTop.html
@@ -74,7 +74,7 @@
 							<!-- ENGEENERING TEST firma & mypay -->
 							<li>
 								<a>
-									<i class="fa fa-wheelchair"></i> <span th:text="#{engineering.engineering}">label.engineering</span>
+									<i class="fa fa-bug"></i> <span th:text="#{engineering.engineering}">label.engineering</span>
 									<span class="fa fa-chevron-down"></span>
 								</a>
 								<ul class="nav child_menu" style="display: none">
